<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.sf.prefixedproperties</groupId>
	<artifactId>prefixedproperties</artifactId>
	<version>3.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>PrefixedProperties</name>
	<description>Extended Properties class to filter properties by an environment, system, host, user or a combination of them.
Supports request depended propeties.
Use XML, Properties or JSON to write your configuration. Supports Spring as PropertyPlaceholderConfigurer or PropertyOverrideConfigurer.
Use Resourcebundles on a environmental or user specific level.</description>
	<url>http://prefproperties.sourceforge.net</url>
	<inceptionYear>2010</inceptionYear>
	<licenses>
		<license>
			<name>BSD</name>
			<url>${license.url}</url>
			<distribution>repo</distribution>
		</license>
	</licenses>


	<issueManagement>
		<url>https://github.com/mbrade/prefixedproperties/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<scm>
		<connection>scm:git:https://github.com/mbrade/prefixedproperties.git</connection>
		<developerConnection>scm:git:https://github.com/mbrade/prefixedproperties.git</developerConnection>
		<url>https://github.com/mbrade/prefixedproperties</url>
	  <tag>HEAD</tag>
  </scm>

	<properties>
		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
		<license.name>BSD</license.name>
		<license.url>http://www.freebsd.org/copyright/license.html</license.url>
		<java.version>1.6</java.version>
		<encoding>UTF-8</encoding>
		<main.basedir>${project.basedir}</main.basedir>
	</properties>
	
	<distributionManagement>
	  <snapshotRepository>
	    <id>oss-nexus-snapshots</id>
	    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
	  </snapshotRepository>
	  <repository>
	    <id>oss-nexus-releases</id>
	    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
	  </repository>
	</distributionManagement>

	<developers>
		<developer>
			<id>mbrade</id>
			<name>Marco Brade</name>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<build>
		<plugins>
		    <plugin>
		      <groupId>org.sonatype.plugins</groupId>
		      <artifactId>nexus-staging-maven-plugin</artifactId>
		      <version>1.6.3</version>
		      <extensions>true</extensions>
		      <configuration>
		        <serverId>ossrh</serverId>
		        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
		        <autoReleaseAfterClose>true</autoReleaseAfterClose>
		      </configuration>
		    </plugin>		
			<plugin>
				<groupId>com.github.github</groupId>
				<artifactId>downloads-maven-plugin</artifactId>
				<version>0.6</version>
				<configuration>
					<description>Official ${project.name} build of the ${project.version} release</description>
					<override>true</override>
					<includeAttached>true</includeAttached>
					<server>github</server>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>upload</goal>
						</goals>
						<phase>install</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.github</groupId>
				<artifactId>site-maven-plugin</artifactId>
				<version>0.12</version>
				<configuration>
					<message>Building site for ${project.version}</message>
					<server>github</server>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>site</goal>
						</goals>
						<phase>site</phase>
					</execution>
				</executions>
			</plugin>	
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<reportPlugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-project-info-reports-plugin</artifactId>
							<version>2.2</version>
							<configuration>
								<dependencyDetailsEnabled>true</dependencyDetailsEnabled>
								<dependencyLocationsEnabled>true</dependencyLocationsEnabled>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>findbugs-maven-plugin</artifactId>
							<version>2.3.1</version>
							<configuration>
								<maxHeap>512</maxHeap>
								<fork>true</fork>
								<outputEncoding>${encoding}</outputEncoding>
								<xmlOutput>true</xmlOutput>
								<!-- Optional derectory to put findbugs xdoc xml report -->
								<findbugsXmlOutput>true</findbugsXmlOutput>
								<findbugsXmlOutputDirectory>target/site</findbugsXmlOutputDirectory>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>cobertura-maven-plugin</artifactId>
							<version>2.4</version>
							<configuration>
								<check>
									<branchRate>75</branchRate>
									<lineRate>75</lineRate>
									<haltOnFailure>false</haltOnFailure>
									<totalBranchRate>75</totalBranchRate>
									<totalLineRate>75</totalLineRate>
									<packageLineRate>75</packageLineRate>
									<packageBranchRate>75</packageBranchRate>
								</check>
								<formats>
									<format>html</format>
									<format>xml</format>
								</formats>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-checkstyle-plugin</artifactId>
							<version>2.5</version>
							<configuration>
								<encoding>${encoding}</encoding>
								<configLocation>${basedir}/src/etc/checkstyle.xml</configLocation>
								<enableRulesSummary>false</enableRulesSummary>
								<fork>true</fork>
								<meminitial>128m</meminitial>
								<maxmem>512m</maxmem>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
							<version>2.7</version>
							<reportSets>
								<reportSet>
									<id>non-aggregate</id>
									<configuration>
										<includeDependencySources>false</includeDependencySources>
										<javaApiLinks>
											<property>
												<name>api_${java.version}</name>
												<value>http://download.oracle.com/javase/6/docs/api/</value>
											</property>
											<property>
												<name>spring</name>
												<value>http://static.springsource.org/spring/docs/2.5.x/api</value>
											</property>
										</javaApiLinks>
									</configuration>
									<reports>
										<report>javadoc</report>
									</reports>
								</reportSet>
							</reportSets>
						</plugin>
						<plugin>
							<artifactId>maven-pmd-plugin</artifactId>
							<version>2.5</version>
							<configuration>
								<linkXref>false</linkXref>
								<sourceEncoding>${encoding}</sourceEncoding>
								<minimumTokens>100</minimumTokens>
								<targetJdk>${java.version}</targetJdk>
							</configuration>
							<reportSets>
								<reportSet>
									<reports>
										<report>pmd</report>
										<report>cpd</report>
									</reports>
								</reportSet>
							</reportSets>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-plugin</artifactId>
							<version>2.6</version>
							<configuration>
								<includes>
									<include>**/*Suite.java</include>
									<include>**/*Test.java</include>
								</includes>
								<parallelMavenExecution>true</parallelMavenExecution>
								<perCoreThreadCount>2</perCoreThreadCount>
								<forkMode>once</forkMode>
								<argLine>-Xmx1024m -XX:MaxPermSize=128M</argLine>
								<aggregate>true</aggregate>
							</configuration>
						</plugin>
					</reportPlugins>
				</configuration>
			</plugin>	
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<providerImplementations>
						<git>jgit</git>
					</providerImplementations>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-jgit</artifactId>
						<version>1.9.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.8</version>
				<dependencies>
					<dependency>
						<groupId>com.mycila.xmltool</groupId>
						<artifactId>xmltool</artifactId>
						<version>2.11</version>
					</dependency>
				</dependencies>
				<configuration>
					<excludes>
						<exclude>**/*.json</exclude>
					</excludes>
					<basedir>${basedir}</basedir>
					<header>${main.basedir}/src/etc/header.txt</header>
					<quiet>false</quiet>
					<failIfMissing>false</failIfMissing>
					<aggregate>true</aggregate>
					<includes>
						<include>src/**</include>
						<include>**/test/**</include>
					</includes>
					<useDefaultExcludes>true</useDefaultExcludes>
					<useDefaultMapping>true</useDefaultMapping>
					<properties>
						<year>${project.inceptionYear}</year>
						<project.name>${project.name}</project.name>
						<license>${project.licenses[0].license.name}</license>
						<license.url>${project.licenses[0].license.name}</license.url>
						<developer.name>${project.developers[0].name}
							[${project.developers[0].url}]</developer.name>
					</properties>
					<encoding>${encoding}</encoding>
					<headerDefinitions>
						<headerDefinition>src/etc/licenseplugin-javadoc.xml</headerDefinition>
					</headerDefinitions>

				</configuration>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<archive>
						<index>true</index>
						<manifest>
							<addClasspath>true</addClasspath>
						</manifest>
						<manifestEntries>
							<mode>development</mode>
							<url>${project.url}</url>
							<key>value</key>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		    <plugin>
		      <groupId>org.apache.maven.plugins</groupId>
		      <artifactId>maven-gpg-plugin</artifactId>
		      <version>1.5</version>
		      <executions>
		        <execution>
		          <id>sign-artifacts</id>
		          <phase>verify</phase>
		          <goals>
		            <goal>sign</goal>
		          </goals>
		        </execution>
		      </executions>
		    </plugin>			
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<maxHeap>512</maxHeap>
					<fork>true</fork>
					<outputEncoding>${encoding}</outputEncoding>
					<xmlOutput>true</xmlOutput>
					<!-- Optional derectory to put findbugs xdoc xml report -->
					<findbugsXmlOutput>true</findbugsXmlOutput>
					<findbugsXmlOutputDirectory>target/site</findbugsXmlOutputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<check>
						<branchRate>75</branchRate>
						<lineRate>75</lineRate>
						<haltOnFailure>false</haltOnFailure>
						<totalBranchRate>75</totalBranchRate>
						<totalLineRate>75</totalLineRate>
						<packageLineRate>75</packageLineRate>
						<packageBranchRate>75</packageBranchRate>
					</check>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<encoding>${encoding}</encoding>
					<configLocation>${basedir}/src/etc/checkstyle.xml</configLocation>
					<enableRulesSummary>false</enableRulesSummary>
					<fork>true</fork>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.7</version>
				<reportSets>
					<reportSet>
						<id>non-aggregate</id>
						<configuration>
							<includeDependencySources>false</includeDependencySources>
							<javaApiLinks>
								<property>
									<name>api_${java.version}</name>
									<value>http://download.oracle.com/javase/6/docs/api/</value>
								</property>
								<property>
									<name>spring</name>
									<value>http://static.springsource.org/spring/docs/2.5.x/api</value>
								</property>
							</javaApiLinks>
						</configuration>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<linkXref>false</linkXref>
					<sourceEncoding>${encoding}</sourceEncoding>
					<minimumTokens>100</minimumTokens>
					<targetJdk>${java.version}</targetJdk>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>pmd</report>
							<report>cpd</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<includes>
						<include>**/*Suite.java</include>
						<include>**/*Test.java</include>
					</includes>
					<parallelMavenExecution>true</parallelMavenExecution>
					<perCoreThreadCount>2</perCoreThreadCount>
					<forkMode>once</forkMode>
					<argLine>-Xmx1024m -XX:MaxPermSize=128M</argLine>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<modules>
		<module>pp-core</module>
		<module>pp-spring</module>
	</modules>
</project>
